# LearnCUDA

./: CMakeLists.txt  README.md
HW1/: CMakeLists.txt  kernal.cu  kernal.cuh  main.cpp
HW2/: CMakeLists.txt  kernal.cu  kernal.cuh  main.cpp
